php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #36857 readfile() problem(stream used)
Submitted: 2006-03-25 14:29 UTC Modified: 2006-08-04 08:14 UTC
From: fcicqbbs at gmail dot com Assigned:
Status: Closed Package: HTTP related
PHP Version: 5.1.2 OS: windows xp
Private report: No CVE-ID: None
 [2006-03-25 14:29 UTC] fcicqbbs at gmail dot com
Description:
------------
readfile() problem(stream used)
stream functions do not support HTTP 1.1 206 Partial Content.


Reproduce code:
---------------
$context=array('http' => array ('header'=> 'Range: bytes=1024-', ),);
$xcontext = stream_context_create($context);
readfile('http://localhost/1.mp3',0,$xcontext);
//the file is exist,if I don't use $xcontext,the code works well.

Expected result:
----------------
I want to get the Partial Content from 1024 byte to the end of the file
It says:
[function.readfile]: failed to open stream: HTTP request failed! HTTP/1.1 206 Partial Content


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-03-26 19:13 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2006-08-04 08:14 UTC] fcicqbbs at gmail dot com
thanks.....
i found 36857 in php5.1.3....
http://www.fcicq.net/wp/
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC