Fixed bug #36857 (Added support for partial content fetching to the HTTP streams wrapper).